test/src/e2e_vm_tests/test_programs/should_fail/references/expression_cannot_be_referenced/src/main.sw
script;

fn main() {
    while true {
        &break;
    }

    while true {
        &continue;
    }

    let _ = &return;
}
